--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Название нашего сайта</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+
 </head>
 <body>
 
