--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 <head>
     <title>Название нашего сайта</title>
     <meta charset="UTF-8">
-
+    <p>вадлыэв
+    вапжыэапыэ
+    чаэыаы
+    чяваэчляж\аэид</p>
 </head>
 <body>
 
