--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
 <body>
     <p>вaeiowrpoi
     fdgks'fs
-    dfg;sldf
+    [phif]
     fvb;'ksdflb</p>
     <p>ksdfjs;o
-    kzdf;lsz
+    ;lhknfkmn
     kzdflxz
     sfdlbs'</p>
     <p>ksdfjs;o
