--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Моя первая страница</title>
+	<title>Тум-туру-турум-пум-пум</title>
 </head>
 <body>
-
+	<h1>Заголовок моей страницы</h1>
 </body>
 </html>
